--- a/public/stylesheets/parts/_consumption.scss
+++ b/public/stylesheets/parts/_consumption.scss
@@ -98,4 +98,60 @@
         width: 100%;
         border: 2px solid black;
     }
+
+}
+
+#showCalcMwhs {
+    display: block;
+    margin: 0 auto;
+
+}
+
+.contracted-power {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: 200px;
+    background-color: rgb(230, 246, 212);
+    padding: 10px;
+    border: 1px solid green;
+    border-radius: 10px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    &__close {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        color: red;
+        font-size: 25px;
+        cursor: pointer;
+        transition: .3s;
+
+        &:hover {
+            font-size: 30px;
+        }
+    }
+
+    &__input {
+        width: 70px;
+        text-align: center;
+        border: 1px solid green;
+        padding: 10px;
+
+        &:focus {
+            border: 2px solid indigo;
+            box-shadow: 1px 1px 1px;
+        }
+    }
+
+    div {
+        font-size: 17px;
+        letter-spacing: 1px;
+        text-align: center;
+    }
 }
