basic validation add

--- a/views/consumption.pug
+++ b/views/consumption.pug
@@ -14,7 +14,7 @@ block content
         p(class='contracted-power__score')
     .consumption-wrapper__fvs
       div
-        h2 Faktura 1
+        h2 Start
         p Okres od:
         input(type="date" id='beginingDate')
         p Poprzednie wskazanie licznika [Strefa I ]
@@ -22,7 +22,7 @@ block content
         p Poprzednie wskazanie licznika [Strefa II ]
         input(type="text" id='numberOneSecondSphere' value=0)
       div
-        h2 Faktura 3
+        h2 Koniec
         p Okres do:
         input(type="date" id='endDate')    
         p Obecne wskazanie licznika [Strefa I ] 
