--- a/views/crmLogin.pug
+++ b/views/crmLogin.pug
@@ -1,31 +1,13 @@
 extends layout
 
 block content
-  link(rel='stylesheet', href='/stylesheets/modifiers/crm.css')   
-  .login-crm
-    div(class="login-crm__title") 
-      span ZajazdCRM
-      span ®   
-    form(method='post')
-        input(id='usernameCrm' type='text' placeholder='login' name="login")
-        input(id='passwordCrm' type='password' placeholder='hasło' name="password")
-        button(class="login-crm__btn" type='submit') Zajeżdżam! 
-          i(class="fas fa-glass-cheers")
-        div(class="show-about-project") 
-          i(class="fab fa-firefox")  
-          span  projekcie
-          
-        .about-project
-          .about-project__close Zamknij
-          h1(class="about-project__title") O projekcie
-          p(class="about-project__description") Projekt ma na celu ułatwienie zarządzania zimną bazą z ogłoszeń. Z założenia klient, z którym mamy nawiązaną jakąś relację, musi być i tak przeniesiony do Vision. 
-          h2(class="about-project__subtitle") Funkcjonalność:
-          ul(class="about-project__list")
-            li(class="about-project__item") Identyfikatorem klienta jest jego nr tel;
-            li(class="about-project__item") Konflikt przy próbie dodania ponownie tego samego nr;
-            li(class="about-project__item") Sortowanie klientów po dzielnicach;
-            li(class="about-project__item") Sortowanie klientów po statusach;
-            li(class="about-project__item") Szybki eksport bazy do pliku JSON;
-            li(class="about-project__item") Możliwość importu bazy z pliku JSON - tysiące rekordów w niespełna minutę;
-            li(class="about-project__item") Statystyki - przyrost bazy dzienny, miesięczny ect.           
+  link(rel='stylesheet', href='/stylesheets/modifiers/css/crm.min.css')   
+  .crm-login-wrapper
+    form.login-form(action='' method='post')
+      h1.login-form__heading energy2000
+      h1.login-form__heading.login-form__heading--uppercase crm
+      input.login-form__input(type='text' name='login' placeholder='login')
+      input.login-form__input(type='text' name='password' placeholder='hasło')
+      button.login-form__btn(type='submit') Zaloguj
+        
   script(src="/javascripts/crmLogin.js")  
