logging to crm ok

--- a/public/stylesheets/modifiers/sass/_login.scss
+++ b/public/stylesheets/modifiers/sass/_login.scss
@@ -1,7 +1,7 @@
 .crm-login-wrapper {
     height: 100vh;
     width: 100vw;
-    background: rgb(2, 0, 36);
+    background: $basic-background;
     display: flex;
     justify-content: center;
     align-items: center;
