--- a/public/stylesheets/modifiers/sass/crm.scss
+++ b/public/stylesheets/modifiers/sass/crm.scss
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap');
-$heading-color: rgb(239, 234, 234);
-$login-color: linear-gradient(to left, #743ad5, #d53a9d);
-
 * {
     margin: 0;
     padding: 0;
@@ -19,4 +15,6 @@ body {
 }
 
 //koniec dodatek w osadzaniu w enerji-cc
+@import './sets';
 @import './login';
+@import './crm-panel';
