--- a/views/crmLogin.pug
+++ b/views/crmLogin.pug
@@ -7,7 +7,7 @@ block content
       h1.login-form__heading energy2000
       h1.login-form__heading.login-form__heading--uppercase crm
       input.login-form__input(type='text' name='login' placeholder='login')
-      input.login-form__input(type='text' name='password' placeholder='hasło')
+      input.login-form__input(type='password' name='password' placeholder='hasło')
       button.login-form__btn(type='submit') Zaloguj
         
   script(src="/javascripts/crmLogin.js")  
