basic rwd to crm login

--- a/public/stylesheets/modifiers/sass/crm.scss
+++ b/public/stylesheets/modifiers/sass/crm.scss
@@ -14,6 +14,10 @@ body {
     display: none;
 }
 
+.menu-mobile {
+    display: none !important;
+}
+
 //koniec dodatek w osadzaniu w enerji-cc
 @import './sets';
 @import './login';
