--- a/views/crmLogin.pug
+++ b/views/crmLogin.pug
@@ -10,4 +10,4 @@ block content
       input.login-form__input(type='password' name='password' placeholder='hasło')
       button.login-form__btn(type='submit') Zaloguj
         
-  script(src="/javascripts/crmLogin.js")  
+  //- script(src="/javascripts/crmLogin.js")  
