--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -10,6 +10,10 @@
         text-align: center;
         padding: 10px;
         background: $login-color;
+
+        @include mq('small') {
+            font-size: 30px;
+        }
     }
 
     &__subtitle {
@@ -17,6 +21,10 @@
         font-family: $title-font;
         text-align: center;
         padding: 10px;
+
+        @include mq('small') {
+            font-size: 21px;
+        }
     }
 }
 
@@ -25,6 +33,12 @@
     top: 6px;
     right: 7px;
     @include btn-logout;
+
+    @include mq('small') {
+        position: unset;
+        width: 100vw;
+        border-radius: 0px;
+    }
 }
 
 .chat-container__hide {
