kret add to ofertomat

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -11,6 +11,7 @@ block content
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
         i(class="fas fa-fingerprint")
+    include parts/kret
     .calc-wear
       div(class="calc-wear__hide")
         i(class="fas fa-minus-circle")
@@ -191,6 +192,7 @@ block content
   script(src="/javascripts/babbleTest.js")
   script(src="/javascripts/smallparts/easyPrices.js") 
   script(src="/javascripts/smallparts/knowHow.js") 
+  script(src="/javascripts/kret.js")
   //- Start
   //- script(src="/javascripts/smallparts/calcSavings.js")
   //- script(src="/javascripts/smallparts/calcWear.js")
