--- a/views/parts/kret.pug
+++ b/views/parts/kret.pug
@@ -1,14 +1,14 @@
 link(rel='stylesheet', href='/stylesheets/modifiers/kret.css') 
 form.kret(action="panel/kret/" method="post")
-  h1.kret__title @kret
+  img(src="/images/krecik.png", alt="" class='kret__logo')
   input.kret__input.kret__clean(type='text' name='id' placeholder='NIP' required='')
   input.kret__input.kret__clean(type='text' name='name' placeholder='Nazwa')
   select.kret__input(name='category' id='')
+    option(value='mine') Klient własny
     option(value='p5') P5
     option(value='partner') Inny partner
     option(value='country') Rolnicy
-    option(value='factory') Zakłady
-    option(value='mine') Klient własny
+    option(value='factory') Zakłady    
   input.kret__input.kret__clean(type='text' name='phone' placeholder='Telefon')
   input.kret__input.kret__clean(type='text' name='email' placeholder='Email')
   input.kret__input.kret__clean(type='text' name='consumption' placeholder='Zużycie')
