--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -25,6 +25,11 @@
         @include mq('small') {
             font-size: 21px;
         }
+
+        .user-settings {
+            padding-left: 10px;
+            cursor: pointer;
+        }
     }
 }
 
@@ -43,4 +48,71 @@
 
 .chat-container__hide {
     display: none;
+}
+
+.user-settings-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    @include center;
+    width: 300px;
+    height: 350px;
+    background-color: $basic-background;
+    @include main-border;
+    border-radius: 10px;
+    padding: 10px;
+
+    &__close {
+        position: absolute;
+        top: -16px;
+        right: -16px;
+        font-size: 30px;
+        color: rgba(225, 52, 52, 0.702);
+        cursor: pointer;
+    }
+
+    &__title {
+        font-family: $title-font;
+        text-align: center;
+        color: $heading-color;
+    }
+
+    &__btn {
+        height: 50px;
+        width: 200px;
+        @include main-border;
+        background-color: transparent;
+        border-radius: 10px;
+        color: $heading-color;
+        font-family: $content-font;
+        cursor: pointer;
+    }
+
+    .change-data-password {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        position: absolute;
+        height: 300px;
+        @include center;
+        background: $basic-background;
+        @include main-border;
+        padding: 20px;
+
+        &__description {
+            display: block;
+            text-align: center;
+            font-family: $title-font;
+            font-size: 20px;
+            color: $heading-color;
+        }
+
+        &__close {
+            @include close-sign(-8px, -14px)
+        }
+
+    }
 }
