create fetch for change user data

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -30,6 +30,7 @@ block content
          span(class='change-data-password__description') Nowe hasło
          input(id='newPassword' class='change-data__input' placeholder='nowe') 
          button(class='user-settings-container__btn btn-change-password') Zmiana hasła 
-         p(class='change-data-password__response')          
-   script(defer src="/javascripts/chat.js")  
+         p(class='change-data-password__response')             
+   script(defer src="/javascripts/crmChangeUserData.js")  
+   //-  script(defer src="/javascripts/chat.js") 
        
