--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -51,7 +51,7 @@
 }
 
 .user-settings-container {
-    display: flex;
+    display: none;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
@@ -91,7 +91,7 @@
     }
 
     .change-data-password {
-        display: flex;
+        display: none;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
