--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -29,7 +29,7 @@ block content
          input(id='actualPassword' class='change-data__input' placeholder='stare') 
          span(class='change-data-password__description') Nowe hasło
          input(id='newPassword' class='change-data__input' placeholder='nowe') 
-         button(class='user-settings-container__btn btn-change-password') Zmiana hasła 
+         button(class='user-settings-container__btn btn-change-password btn-change-password-apply') Zmiana hasła 
          p(class='change-data-password__response')             
    script(defer src="/javascripts/crmChangeUserData.js")  
    //-  script(defer src="/javascripts/chat.js") 
