changing everything works ok

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -90,7 +90,9 @@
         cursor: pointer;
     }
 
-    .change-data-password {
+    .change-data-password,
+    .change-data-email,
+    .change-data-phone {
         display: none;
         flex-direction: column;
         justify-content: space-evenly;
