--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -46,7 +46,18 @@ block content
          span(class='change-data-password__description') Nowy telefon
          input(id='newPhone' class='change-data__input' placeholder='nowy tel...') 
          button(class='user-settings-container__btn btn-change-password btn-change-phone-apply') Zmiana tel. 
-         p(class='change-data-phone__response')         
+         p(class='change-data-phone__response')  
+     .clients-wrapper
+       table(class='clients-table')
+         tr
+           th NIP
+           th Nazwa
+           th Telefon
+           th Zużycie
+           th Opiekun
+                
+                 
    script(defer src="/javascripts/crmChangeUserData.js")  
+   script(defer src="/javascripts/crmGetClients.js")  
    //-  script(defer src="/javascripts/chat.js") 
        
