remove easter motive

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -53,7 +53,7 @@ block content
            th NIP
            th Nazwa
            th Telefon
-           th Zużycie
+           th Zużycie [MWH]
            th Opiekun
                 
                  
