--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,11 +21,11 @@ html
         //-   a(href="/stats")  Stats
         li 
           a(href="/consumption")  Zużycie FV 
-    .row-eggs
-      .egg
-      .egg.egg2
-      .egg.egg3
-      .egg.egg4
+    //- .row-eggs
+    //-   .egg
+    //-   .egg.egg2
+    //-   .egg.egg3
+    //-   .egg.egg4
     block content
 script(src="/javascripts/mobile.js") 
 //- script(src="/javascripts/snow.js") 
