spinner before loading clients

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -48,6 +48,15 @@ block content
          button(class='user-settings-container__btn btn-change-password btn-change-phone-apply') Zmiana tel. 
          p(class='change-data-phone__response')  
      .clients-wrapper
+       .lds-roller
+        div
+        div
+        div
+        div
+        div
+        div
+        div
+        div
        table(class='clients-table')
          tr
            th NIP
