getting from db, spinner, ok. problem with client ammount

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -154,8 +154,16 @@
         }
     }
 
+
+
 }
 
+.wallet-summary {
+    text-align: center;
+    font-family: $content-font;
+    font-size: 20px;
+    color: $heading-color
+}
 
 // spinner początek
 .lds-roller {
