backing to game =)

--- a/views/parts/kret.pug
+++ b/views/parts/kret.pug
@@ -8,7 +8,8 @@ form.kret(action="panel/kret/" method="post")
     option(value='p5') P5
     option(value='partner') Inny partner
     option(value='country') Rolnicy
-    option(value='factory') Zakłady    
+    option(value='factory') Zakłady 
+    option(value='factory') Bez kategorii    
   input.kret__input.kret__clean(type='text' name='phone' placeholder='Telefon')
   input.kret__input.kret__clean(type='text' name='email' placeholder='Email')
   input.kret__input.kret__clean(type='text' name='consumption' placeholder='Zużycie')
