--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -317,3 +317,46 @@
     font-size: 20px;
     font-family: $title-font;
 }
+
+.search {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    .searchTerm {
+        width: 400px;
+        border: 3px solid #743ad5;
+        border-right-color: #743ad5;
+        border-right-style: solid;
+        border-right-width: 3px;
+        border-right: none;
+        padding: 5px;
+        height: 36px;
+        border-radius: 5px 0 0 5px;
+        outline: none;
+        color: rgb(49, 153, 104);
+
+        &:focus {
+            color: #743ad5;
+        }
+    }
+
+    .searchButton {
+        width: 40px;
+        height: 36px;
+        border: 1px solid #743ad5;
+        background: #743ad5;
+        text-align: center;
+        color: #fff;
+        border-radius: 0 5px 5px 0;
+        cursor: pointer;
+        font-size: 20px;
+        transition: .5s;
+
+        &:hover {
+            color: #743ad5;
+            background: #fff;
+        }
+    }
+}
