searching by id works

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -69,7 +69,10 @@ block content
            th Nazwa
            th Telefon
            th Zużycie [MWH]
-           th Opiekun 
+           th Opiekun
+       .doesnt-find-client
+       .back-to-all
+          button(class='back-to-all__btn') Powrót do listy
        .number-of-pages
        .pagination-crm  
          button(class='pagination-crm__prev') Poprzednia 
