--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -360,3 +360,29 @@
         }
     }
 }
+
+.back-to-all__btn {
+    display: none;
+    border: 2px solid white;
+    color: $heading-color;
+    font-size: 20px;
+    font-family: $content-font;
+    background-color: transparent;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .4s;
+
+    &:hover {
+        color: $basic-background;
+        background-color: $heading-color;
+    }
+}
+
+.doesnt-find-client {
+    text-align: center;
+    color: rgb(233, 80, 80);
+    font-size: 20px;
+    font-family: $content-font;
+    margin: 5px;
+}
