--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -447,8 +447,11 @@
         font-size: 22px;
     }
 
-    &__status {
+    &__select-status {
         text-align: center;
+        background-color: transparent;
+        color: $heading-color;
+        border: 1px solid greenyellow;
     }
 
     &__line-contact,
