--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -134,6 +134,7 @@ block content
              input(class='particular-client__par particular-client__street-number' name='streetNumber')
          button(class='particular-client__btn-tasks') Zadania
          input(class='particular-client__description' name='description')
+         .particular-client__update-info
          .particular-client__line-action-buttons
            input(class='particular-client__btn-summary particular-client__btn-update' type='submit' value='Zaktualizuj')
            button(class='particular-client__btn-summary particular-client__btn-cancel' type='button') Anuluj           
