--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -11,7 +11,10 @@ block content
        span(class='user-settings')
          i(class="fas fa-user-cog")
      .search
-      input.searchTerm(type='text' placeholder='Wyszukaj po nip')
+      select(class='search__select-option')
+        option(value="nip") NIP
+        option(value='name') Nazwa
+      input.searchTerm(type='text' placeholder='Wyszukaj po nip lub nazwie')
       button.searchButton(type='submit')
         i.fa.fa-search
      div(class="chat-container")
